--- a/img.ipynb
+++ b/img.ipynb
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "img = {}\n",
-    "number = ['00','01','02','03','04','05','06']\n",
+    "number = ['00','01']\n",
     "j = 0\n",
     "\n",
     "web = 'https://www.pro-football-reference.com/players/xxx/{}{}.htm'\n",
@@ -86,22 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img"
+    "fd = pd.DataFrame.from_dict(img, orient=\"index\")\n",
+    "fd.to_csv(\"img.csv\")"
    ]
   }
  ],
